[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "README.md",
]

[tool.hatch.build.targets.wheel]
# This is a minimal configuration for building a Python package with Hatchling.
packages = ["src/"]

[project]
name = "radenv"
dynamic = ["version"]
authors = [
    {name = "Ethan Thompson"},
]
description = "A tool to run FreeRADIUS multi-server tests."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-on-whales",
    "jinja2",
    "pyyaml",
    "termcolor",
    "aiofiles",
    "watchfiles",
]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/InkbridgeNetworks/radenv"
GitHub = "https://github.com/InkbridgeNetworks/radenv"
Issues = "https://github.com/InkbridgeNetworks/radenv/issues"

[project.scripts]
radenv = "src.multi_server_test:interface"
radenv-config = "src.config_builder:interface"
radenv-setup = "src.setup_utils:main"